Adding Day 1 content

--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
         <hr width="100%" size="2">
     </header>
     <section>
-        <p>Recording my Tech Journey one step at a time</p>
-        <p>My goal is to become a 🧑‍💻full stack developer</p>
+        <p>My tech journey to full stack dev, one step at a time 🧑‍💻</p>
     </section>
     <section>
-        <a href="Day-1-Cats.html">Day 1</a>
+        <a href="Day1.html">Day 1</a>
     </section>
 </body>
 </html>
