--- a/Day1.html
+++ b/Day1.html
@@ -11,7 +11,7 @@
         <h1>Day 1: Welcome to FreeCodeCamp</h1>
         <h3>Date: 05/23/2025</h3>
         <hr>
-        <p>Today I followed the first tutorial on <a href="wwww.freecodecamp.com">FreeCodeCamp</a>a> that walks you through how to use the platform. Here's what I made</p>
+        <p>Today I followed the first tutorial on <a href="wwww.freecodecamp.com">FreeCodeCamp</a> that walks you through how to use the platform. Here's what I made</p>
         <img src="images/day1-Build a Curriculum Outline.png" alt="image of first project welcome to freecodecamp" style="width: 80%"/>
         <p>Mainly learned:</p>
         <ul>
