More content for day1.html

--- a/Day1.html
+++ b/Day1.html
@@ -9,15 +9,26 @@
 <body>
     <main>
         <h1>Day 1: Welcome to FreeCodeCamp</h1>
-        <h3>Date: 05/23/2025</h3>
+        <h4>Date: 05/23/2025</h4>
         <hr>
-        <p>Today I followed the first tutorial on <a href="wwww.freecodecamp.com">FreeCodeCamp</a> that walks you through how to use the platform. Here's what I made</p>
+
+        <section>
+        <h2>Learning The Platform</h2>
+        <p>Today I followed the first tutorial on <a href="wwww.freecodecamp.com">FreeCodeCamp</a> that walks you through how to use the platform by coding along one line at a time. Here's what I made</p>
         <img src="images/day1-Build a Curriculum Outline.png" alt="image of first project welcome to freecodecamp" style="width: 80%"/>
-        <p>Mainly learned:</p>
+        </section>
+        
+        <section>   
+        <h2>Debugging A profile page</h2>
+        <p>This project was a lot of fun for me. We were given code with numerous spelling errors in the HTML element tags and asked to correct them. I make typus all the time, so this project was really relatable and I enjoyed being detail-oriented and fixing each issue.</p>
+        <img src="Images/day1-debugging.png" alt="image of debugging a profile page" style="width: 80%"/>
+        </section>
+
+        <h2>Today's Reflections:</h2>
         <ul>
             <li>How to follow the lesson plans.</li>
             <li>Different html elements.</li>
-            <li>To trust the process</li>
+            <li>To trust the process.</li>
         </ul>
         <p>The journey ahead is going to be extremely long and difficult, but I am committed to moving forward no matter what🚶‍➡️🏔️</p>
     </main>
