fixed path to debugging image in Day1.html

--- a/Day1.html
+++ b/Day1.html
@@ -21,7 +21,7 @@
         <section>   
         <h2>Debugging A profile page</h2>
         <p>This project was a lot of fun for me. We were given code with numerous spelling errors in the HTML element tags and asked to correct them. I make typus all the time, so this project was really relatable and I enjoyed being detail-oriented and fixing each issue.</p>
-        <img src="Images/day1-debugging.png" alt="image of debugging a profile page" style="width: 80%"/>
+        <img src="images/day1-debugging.png" alt="image of debugging a profile page" style="width: 80%"/>
         </section>
 
         <h2>Today's Reflections:</h2>
