fixed spelling error in Day 1

--- a/Day1.html
+++ b/Day1.html
@@ -19,7 +19,7 @@
         </section>
         
         <section>   
-        <h2>Debugging A profile page</h2>
+        <h2>Debugging A Profile Page</h2>
         <p>This project was a lot of fun for me. We were given code with numerous spelling errors in the HTML element tags and asked to correct them. I make typus all the time, so this project was really relatable and I enjoyed being detail-oriented and fixing each issue.</p>
         <img src="images/day1-debugging.png" alt="image of debugging a profile page" style="width: 80%"/>
         </section>
