Added day 2 files and updated index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </section>
     <section>
         <a href="Day1.html">Day 1</a>
+        <a href="Day2.html">Day 2</a>
     </section>
 </body>
 </html>
