Day 3 - Added Fried Rice Recipe

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <section>
         <a href="Day1.html">Day 1</a>
         <a href="Day2.html">Day 2</a>
+        <a href="Day3.html">Day 3</a>
     </section>
 </body>
 </html>
