--- a/Day2.html
+++ b/Day2.html
@@ -17,7 +17,7 @@
     <section>
         <h2>Coding A Cat Photo App</h2>
         <p>Today I followed another tutorial on Freecodecamp, in which we make a web page talking about cats. Here's how it looks</p>
-        <img src="images/Day2-catphotoapp.png" alt="image of first project welcome to freecodecamp" style="width: 80%"/>
+        <img src="images/Day2-catphotoapp.png" alt="image of my cat photo app" style="width: 80%"/>
     </section>
 
     <section>
